--- a/notes/finance.org
+++ b/notes/finance.org
@@ -8,3 +8,64 @@
   - Facebook Inc went down after announcing the launch of the Meta-verse
   - people are pessimistic about this move which doesn't affect the fundamentals
   - price should go back to normal
+
+* AJBellmodels/marts/products/fct_products_change_log.sql
++ put in about £5000
+** ETFs
++ 80%
+*** IShares Core S&P 500 USD acc GBP
++ 35%
++ bought 4 shares of this at a price of 355 including costs
+*** Liontrust Special Situations I Inc
++ 25%
+*** Premier Miton European Opports B acc
++ 25%
+*** JPM Emerging Markets Equity C (dist) GBP
++ 15%
+
+** Stocks & Shares
++ 20%
+*** PodPoint
++ 20%
+*** Rio Tinto
+
+** Possible Stocks
+*** Unity
++ the game engine
+*** Microsoft
+*** SAP
++ software
+*** Stratasys
+*** NVidia
+*** Disney
+
+** Portfolio Evaluation
++ usually every quarter
+
+* Crypto
++ £1000
++ in 3 installments
+  1. 30%: 16/11/21
+  2. 30%:
+  3. 40%:
+
+** The Big Boys
+***  ETH
++ 20%
+***  BTC
++ 20%
+*** ADA - Cardano
++ 10%
+
+** The Stains
+*** LUNA
++ 15%
++ wrapped
+*** MANA - Decentraland
++ 10%
+*** AMPL - Ampleforth
++ 10%
+*** ATOM - Cosmos
++ 10%
+*** YFI - yearn.finance
++ 5%
